# lunar-chess

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  draw_arrow.rs  release-plz.toml  train.txt  trainer.ipynb
.github/workflows/: lint.yml  release-plz.yml  release.yml
src/: board.rs  capture.rs  config.rs  detection.rs  engine.rs  error.rs  errors.rs  main.rs  stockfish.rs
src/board_vision/: edge_detection.rs  grid_detection.rs  line_detection.rs  mod.rs
src/capture/: mod.rs  screen.rs
src/chess/: board.rs  color.rs  mod.rs  piece.rs  score.rs  types.rs
src/detection/: mod.rs
src/drawing/: board.rs  mod.rs  overlay.rs
src/engine/: manager.rs  mod.rs
src/model/: confidence.rs  detected.rs  mod.rs
src/services/: analysis.rs  detection.rs  mod.rs
src/ui/: dimensions.rs  draw_board.rs  mod.rs  overlay.rs  types.rs
src/vision/: board_detection.rs  detector.rs  edge_detection.rs  grayscale.rs  grid_detection.rs  line_detection.rs  mod.rs  postprocess.rs
src/vision/board_detection/: edges.rs  geometry.rs  grid.rs  hough.rs  mod.rs  refine.rs  scoring.rs  segments.rs  stabilizer.rs
training/: .gitignore  .txt  chess.ipynb  convert_to_onnx.py  gen_board_data.py  gen_pieces_data.py  get_pieces.py  main.py  pyproject.toml
