[package]
name = "lunar-chess"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
] }

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"

font-kit = "0.14.3"
raqote = "0.8.5"

winit = "0.30"
xcap = "0.7"

image = "0.25.9"
fast_image_resize = { version = "5.3", features = ["image", "rayon"] }
rayon = "1.11"

ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", features = ["cuda"] }
softbuffer = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

ruci = { version = "2.1.0", features = ["engine-sync"] }

config = { version = "0.15", features = ["toml"] }
once_cell = "1.21.3"

serde = { version = "1.0.228", features = ["derive"] }
