[package]
name = "lunar-chess"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
config = { version = "0.15", features = ["toml"] }
fast_image_resize = { version = "5.3", features = ["image", "rayon"] }
font-kit = "0.14.3"
image = "0.25.9"
ndarray = "0.16.1"
once_cell = "1.21.3"
ort = { version = "2.0.0-rc.10", features = ["cuda"] }
parking_lot = "0.12"
raqote = "0.8.5"
rayon = "1.11"
ruci = { version = "2.1.0", features = ["engine-sync"] }
serde = { version = "1.0.228", features = ["derive"] }
softbuffer = "0.4"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
winit = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
] }
windows-capture = "1.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
